[metadata]
name = AnkiChinese
author = Luke Tao
author_email = luketao68@gmail.com
description = An ArchChinese scraper for Anki
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/autoelk/AnkiChinese
project_urls =
    Repository = https://github.com/autoelk/AnkiChinese
    Bug Tracker = https://github.com/autoelk/AnkiChinese/issues
    Changelog = https://github.com/autoelk/AnkiChinese/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.8
install_requires =
    bs4
    html5lib
    aiometer
    playwright
    pandas
    genanki
    tqdm
    requests

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ankichinese = AnkiChinese.main:cli